--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,9 +5,29 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - postgres.snappcloud.io
+  - apps
   resources:
-  - postgres
+  - statefulsets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - services
   verbs:
   - create
   - delete
@@ -19,13 +39,25 @@ rules:
 - apiGroups:
   - postgres.snappcloud.io
   resources:
-  - postgres/finalizers
+  - postgreses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - postgres.snappcloud.io
+  resources:
+  - postgreses/finalizers
   verbs:
   - update
 - apiGroups:
   - postgres.snappcloud.io
   resources:
-  - postgres/status
+  - postgreses/status
   verbs:
   - get
   - patch
